# aicmo-chatbot

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  PLAN.md  README.md  REQUIREMENTS.MD  docker-compose.yml  ingest.sh  stop_docker.sh  vercel.json
.claude/docs/: architecture.md  ingestion.md  mcp-tools.md  testing.md
.github/: CODEOWNERS
api/: Dockerfile  auth.py  config.py  logging_utils.py  main.py  pyproject.toml
api/agents/: quote_agent.py  recommendation_agent.py  search_agent.py  summary_agent.py  supervisor.py
api/agents/state/: agent_state.py
api/agents/utils/: llm.py  mcp_client.py  prompts.py
api/db/: crud.py  models.py  session.py
api/ingestion/: chunker.py  metadata_extractor.py  pipeline.py  speaker_detector.py  vtt_parser.py
api/models/: schemas.py
api/routers/: admin.py  auth.py  chat.py  conversations.py  ingest.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  ConversationHistory.tsx  (+2 more)
mcp/: Dockerfile  config.py  pyproject.toml  server.py
mcp/tools/: filter.py  metadata.py  search.py
mcp/utils/: scrape_utils.py  slack_utils.py  typesense_client.py
migrations/: 001_add_user_id_to_conversations.sql
sample_transcript/: Balancing Profit and Social Responsibility with Julie Harrell _unedited_.vtt
tests/: README.md  conftest.py  pyproject.toml
tests/api/: test_admin_router.py  test_auth.py  test_auth_crud.py  test_auth_router.py  test_chat_router.py  test_chunker.py  test_conversations_crud.py  test_conversations_router.py  test_crud.py  test_ingest_router.py  test_metadata_extractor.py  test_metadata_extractor_async.py  test_pipeline.py  test_registration.py  test_schemas.py  test_speaker_detector.py  test_vtt_parser.py
tests/mcp/: test_filter.py  test_metadata.py  test_scrape_utils.py  test_search.py  test_slack_utils.py
(+9 files in other folders)
