[project]
name = "aicmo-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain-openai",
    "langgraph",
    "langgraph-supervisor",
    "fastmcp",
    "typesense",
    "webvtt-py",
    "python-dotenv",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "aiomysql",
    "bcrypt",
    "pyjwt",
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-langchain>=0.1.59",
    "openinference-instrumentation-openai>=0.1.41",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
]
