[project]
name = "aicmo-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "typesense",
    "scrapingbee",
    "requests",
    "python-dotenv",
    "pydantic-settings",
    "uvicorn",
    "openinference-instrumentation-openai>=0.1.41",
    "openai>=2.21.0",
    "arize-otel>=0.11.0",
]
