[project]
name = "aicmo-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "pydantic>=2.12.5",
    "webvtt-py>=0.5.1",
    "sqlalchemy>=2.0.46",
    "aiomysql>=0.3.2",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "scrapingbee>=2.0.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "typesense>=1.3.0",
    "fastapi>=0.128.5",
    "bcrypt",
    "pyjwt",
]
